--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile "org.parceler:parceler-api:1.1.6"
     annotationProcessor "org.parceler:parceler:1.1.6"
 
+    compile 'com.squareup:otto:1.3.8'
+
     compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
     // Dependencies for local unit tests
     testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
