--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.3"
     defaultConfig {
         applicationId "com.example.potikorn.movielists"
         minSdkVersion 15
@@ -24,32 +23,29 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+
+    // test tools
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation "android.arch.core:core-testing:1.1.1"
+    implementation "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testImplementation 'org.mockito:mockito-core:2.18.0'
+    testImplementation "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
+    testImplementation "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrestVersion"
+    testImplementation "org.powermock:powermock-module-junit4:$rootProject.ext.powerMockito"
+    testImplementation "org.powermock:powermock-api-mockito:$rootProject.ext.powerMockito"
+
+    // android support lib
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    compile "com.github.bumptech.glide:glide:3.7.0"
-
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    implementation "com.github.bumptech.glide:glide:3.7.0"
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
-
-    compile "org.parceler:parceler-api:1.1.9"
-    annotationProcessor "org.parceler:parceler:1.1.9"
-
-    compile 'com.squareup:otto:1.3.8'
-
-    compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.ext.espressoVersion"
-    // Dependencies for local unit tests
-    testCompile "org.mockito:mockito-all:$rootProject.ext.mockitoVersion"
-    testCompile "org.hamcrest:hamcrest-all:$rootProject.ext.hamcrestVersion"
-    testCompile "org.powermock:powermock-module-junit4:$rootProject.ext.powerMockito"
-    testCompile "org.powermock:powermock-api-mockito:$rootProject.ext.powerMockito"
 
     String archVersion = '1.1.1'
     implementation "android.arch.lifecycle:runtime:1.1.1"
@@ -69,7 +65,12 @@ dependencies {
     String daggerVersion = '2.13'
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation('com.github.ihsanbal:LoggingInterceptor:2.0.6') {
+        exclude group: 'org.json', module: 'json'
+    }
 }
 repositories {
     mavenCentral()
