--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
     repositories {
         maven { url 'https://maven.google.com' }
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
