--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.register.AcceptRegisterToken" />
+        <activity android:name=".ui.register.RegisterActivity" />
     </application>
 
 </manifest>
